Fixed: chat alignment w/ flexbox

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -18,19 +18,22 @@
 }
 
 #right_msgs_container{
+    height: 500px;
     border: 1px solid black;
 }
 
 #msgs_container{
-    padding: 5px 15px;
+    height: 400px;
     overflow: scroll;
     overflow-x: hidden;
+    padding: 5px 15px;
     border: 1px solid #a1a1a1;
 }
 
 #msgs_list{
-    margin:0px;
-    height:100%;
+    min-height: 380px;
+    padding: 0px;
+    margin: 0px;
     list-style-type: none;
 }
 
@@ -44,9 +47,30 @@
 }
 
 .msg_sent{
-    text-align: end;
+    align-self: flex-end;
 }
 
 .msg_receive{
-    text-align: start;
+    align-self: flex-start;
 }
+
+.flex-container {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    }
